5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4414/executions/1635_1055.log
== SUBMITION (2019-04-15 12:57:06) 
-- CODE:
from math import sin
from math import radians 

vo=float(input("veloci:"))
a=float(input("angulo:"))
g=9.8
d=float(input())

r=((vo**2))*sin(2*a)) /g
if=abs(d-r)>0.1:
	print("nao")
else:
	print("sim")
-- EXECUTION TIME:
0.185943
-- ERROR:
  File "/home/codebench/codes/1635/1055/main.py", line 9
    r=((vo**2))*sin(2*a)) /g
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:57:18) 
-- CODE:
from math import sin
from math import radians 

vo=float(input("veloci:"))
a=float(input("angulo:"))
g=9.8
d=float(input())

r=((vo**2))*sin(2*a)) /g
if=abs(d-r)>0.1:
	print("nao")
else:
	print("sim")
-- ERROR:
File "XXXX", line 9
    r=((vo**2))*sin(2*a)) /g
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:57:41) 
-- CODE:
from math import sin
from math import radians 

vo=float(input("veloci:"))
a=float(input("angulo:"))
g=9.8
d=float(input())

r=(vo**2)*sin(2*a) /g
if=abs(d-r)>0.1:
	print("nao")
else:
	print("sim")
-- EXECUTION TIME:
0.15609
-- ERROR:
  File "/home/codebench/codes/1635/1055/main.py", line 10
    if=abs(d-r)>0.1:
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:57:44) 
-- CODE:
from math import sin
from math import radians 

vo=float(input("veloci:"))
a=float(input("angulo:"))
g=9.8
d=float(input())

r=(vo**2)*sin(2*a) /g
if=abs(d-r)>0.1:
	print("nao")
else:
	print("sim")
-- ERROR:
File "XXXX", line 10
    if=abs(d-r)>0.1:
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:58:01) 
-- CODE:
from math import sin
from math import radians 

vo=float(input("veloci:"))
a=float(input("angulo:"))
g=9.8
d=float(input())

r=(vo**2)*sin(2*a) /g
if abs(d-r)>0.1:
	print("nao")
else:
	print("sim")
-- EXECUTION TIME:
0.182245
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
nao
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:58:04) 
-- CODE:
from math import sin
from math import radians 

vo=float(input("veloci:"))
a=float(input("angulo:"))
g=9.8
d=float(input())

r=(vo**2)*sin(2*a) /g
if abs(d-r)>0.1:
	print("nao")
else:
	print("sim")
-- EXECUTION TIME:
0.206793
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
nao
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:58:05) 
-- CODE:
from math import sin
from math import radians 

vo=float(input("veloci:"))
a=float(input("angulo:"))
g=9.8
d=float(input())

r=(vo**2)*sin(2*a) /g
if abs(d-r)>0.1:
	print("nao")
else:
	print("sim")
-- OUTPUT:
nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:59:12) 
-- CODE:
from math import sin
from math import radians 

vo=float(input("veloci:"))
a=radins(float(input()))
g=9.8
d=float(input())

r=(vo**2)*sin(2*a) /g
if abs(d-r)>0.1:
	print("nao")
else:
	print("sim")
-- EXECUTION TIME:
0.172778
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/1055/main.py", line 5, in <module>
    a=radins(float(input()))
NameError: name 'radins' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:59:26) 
-- CODE:
from math import sin
from math import radians 

vo=float(input("veloci:"))
a=radians(float(input()))
g=9.8
d=float(input())

r=(vo**2)*sin(2*a) /g
if abs(d-r)>0.1:
	print("nao")
else:
	print("sim")
-- EXECUTION TIME:
0.229135
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
